Adds tribute-link with target=_blank

--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
         <em>-- Indian Prime Minister Manmohan Singh</em>
         <br><br>
         <h1 class="is-size-5 title has-text-black-ter has-text-weight-bold">
-          If you have time, you should read more about this incredible human being on his <a href="https://en.wikipedia.org/wiki/Norman_Borlaug" target="_blank">Wikipedia entry</a>
+          If you have time, you should read more about this incredible human being on his
+          <a id="tribute-link" href="https://en.wikipedia.org/wiki/Norman_Borlaug" target="_blank">Wikipedia entry</a>
         </h1>
       </div>
     </section>
