Fixes id='title' place on the page

--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title id="title">Dr. Norman Borlaug</title>
+    <title>Dr. Norman Borlaug</title>
     <link rel="stylesheet" type="text/css" href="css/bulma/bulma.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
   <body id="main">
     <section class="section">
       <div class="container has-text-centered">
-        <h1 class="is-size-3 title has-text-black-ter has-text-weight-bold">Dr. Norman Borlaug</h1>
+        <h1 id="title" class="is-size-3 title has-text-black-ter has-text-weight-bold">Dr. Norman Borlaug</h1>
         <h2 class="subtitle is-size-6 has-text-black">The man who saved a billion lives</h2>
       </div>
     </section>
